# Pick-a-pKa

./: LICENSE.md  README.md  pyproject.toml
MolGpKa_retrained/utils/: descriptor.py  ionization_group.py
datasets/pkalearn/: Full_set_clean.csv  Sampl8_v2.csv  euroSAMPL_compounds2.csv  test_set.csv  test_set_Novartis.csv  test_set_noC.csv  test_set_noNovartis.csv  test_set_random_1.csv  test_set_random_1_noC.csv  test_set_random_2.csv  test_set_random_2_noC.csv  test_set_random_3.csv  test_set_random_3_noC.csv  train_set_0.65.csv  train_set_fromNS_0.65.csv  train_set_noC.csv  train_set_noNovartis.csv  train_set_random_1.csv  train_set_random_1_noC.csv  train_set_random_2.csv  train_set_random_2_noC.csv  train_set_random_3.csv  train_set_random_3_noC.csv
src/molgpka/: __init__.py  predict_pka.py  prepare_dataset_graph.py  protonate.py  train_graph.py
src/molgpka/utils/: gcn_conv.py  ionization_group.py  net.py
src/pick_a_pka/: __init__.py  core.py  predictor.py  types.py
src/pick_a_pka/backends/molgpka/: draw.py  featurizer.py  model.py  protonation.py
src/pick_a_pka/backends/pkalearn/: featurizer.py  microstates.py  model.py
src/pick_a_pka/core/: base.py  types.py
src/pick_a_pka/molgpka/: __init__.py  featurizer.py
src/pick_a_pka/molgpka/utils/: descriptor.py
src/pick_a_pka/new_molgpka/: featurizer.py  model.py
src/pick_a_pka/new_pkalearn/: model.py
src/pick_a_pka/pkalearn/: transfer_chirality.py
src/pick_a_pka/pkalearn/gnn/: argParser.py  change_ionization.py  extract.py  featurizer.py  gnn.py  hyperoptimize.py  main.py  plot_and_print.py  (+6 more)
